# LowLevelPong

./: .main.cpp.swp  CMakeLists.txt  Makefile  README.md  autotest.cpp  main.cpp  play  run_tests
.github/workflows/: build-autotest.yml
headers/: Enums.h  ball.h  collisiondetector.h  paddle.h  scoreboard.h  vec2d.h
src/: ball.cpp  collisiondetector.cpp  main.cpp  paddle.cpp  scoreboard.cpp  vec2d.cpp
